# ncar-caesar

./: .env.example  .gitignore  README.md  pyproject.toml
output/638-001/variables/: variables_RF01,RF02,RF04,RF05,RF06,RF07.csv  variables_RF03.csv  variables_RF09,RF10.csv
src/: header.py  loader.py  variables.py
src/638-001/: __init__.py  summary.py
src/638-021/: __init__.py  potential_temperature.py  temperature_contour.py
src/638-038/: gvr_summary.py  segments.py  water_path.py
src/ds_638_001/: plot_summary.py  summary.py
src/ds_638_021/: mcao.py  plot_mcao.py  plot_potential_temperature.py  plot_temperature_contour.py  plots.py  potential_temperature.py  temperature_contour.py
src/ds_638_038/: __init__.py  load.py  plot_gvr_summary.py  plot_segments.py  plot_water_path.py  segments.py  water_path.py
src/ds_638_052/: __init__.py  cloud_base.py
src/microphysics/: __init__.py  analyze_size_distributions.py  data_loader.py  load.py  plot_size_distribution.py  plot_snow_flux.py  plotting.py  size_distribution.py  snow_mass_flux.py
src/nc/: cache.py  flights.py  header.py  loader.py  remote.py  run_plots.py  segmentation.py  time.py  units.py  variables.py  vars.py
src/swing3/: __init__.py  cloud_variables.py  clouds.py  config.py  features.py  forward_selection.py  grids.py  group_shapley_attribution.py  isotope_shap.py  isotope_subgroup.py  models.py  omega.py  plot_clouds.py  plot_mcao_pe.py  plot_mcao_pe_map.py  plot_shap.py  shap_analysis.py  sst.py
tests/: conftest.py  test_golden_plots.py  test_golden_variables.py
(+28 files in other folders)
