[project]
name = "ncar-caesar"
version = "0.1.0"
description = "CAESAR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # uv pip install -e . to add nc
    "cartopy>=0.25.0",
    "cdo>=1.6.1",
    "dotenv>=0.9.9",
    "joblib>=1.5.3",
    "metpy>=1.7.1",
    "netcdf4>=1.7.4",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "rdp>=0.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xarray>=2026.2.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pillow>=11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
